calendar week view popup alignment issue

--- a/public/css/ambi_custom.css
+++ b/public/css/ambi_custom.css
@@ -683,6 +683,7 @@ footer .notification-alert-holder.slideOut{
     -moz-box-shadow: none !important;
     -o-box-shadow: none !important;
     box-shadow: none !important;
+    margin-top: -5px !important;
 }
 
 /* custom styles for ipad view */
